# memoir

./: Cargo.toml  LICENSE  README.md  example_log.txt
.github/workflows/: rust-clippy.yml  test.yml
examples/: .gitkeep  example.rs
src/: experimental.rs  lib.rs  logging_utility.rs  main.rs  test.txt
src/log_lib/: Cargo.toml
src/log_lib/src/: LoggingUtility.rs  Parsing.rs  lib.rs  logging_utility.rs  test.rs
src/memoir_logger/: Cargo.toml
src/memoir_logger/src/: grouping.rs  lib.rs  logging_utility.rs  test.rs
