[package]
name = "memoir-logger"
version = "1.2.3"
edition = "2021"
license = "MIT"
description = "A simple logging library."
documentation = "https://docs.rs/memoir-logger/latest/memoir_logger/"
homepage = "https://github.com/tylercritchlow/memoir"
repository = "https://github.com/tylercritchlow/memoir"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock"] }
