[package]
name = "memoir-logger"
version = "1.2.3"
edition = "2021"
license = "MIT"
description = "A simple logging library."
documentation = "https://docs.rs/memoir-logger/latest/memoir_logger/"
homepage = "https://github.com/tylercritchlow/memoir"
repository = "https://github.com/tylercritchlow/memoir"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["clock"] }

[features]
grouping = []